--- a/app/src/main/res/layout/fragment_add_dhaba_step1.xml
+++ b/app/src/main/res/layout/fragment_add_dhaba_step1.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.transport.mall.ui.addnewdhaba.step1.AddDhabaStep1VM" />
+            type="com.transport.mall.ui.addnewdhaba.step1.DhabaDetailsVM" />
 
     </data>
 
