--- a/app/src/main/res/layout/dialog_city_selection.xml
+++ b/app/src/main/res/layout/dialog_city_selection.xml
@@ -18,7 +18,7 @@
         android:orientation="vertical"
         android:padding="@dimen/_10sdp">
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/edSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
