--- a/app/src/main/res/layout/fragment_language_selection.xml
+++ b/app/src/main/res/layout/fragment_language_selection.xml
@@ -8,132 +8,133 @@
         <import type="android.view.View" />
 
         <variable
-                name="vm"
-                type="com.transport.mall.ui.authentication.pre_login.languageselection.LanguageSelectionVM" />
+            name="vm"
+            type="com.transport.mall.ui.authentication.pre_login.languageselection.LanguageSelectionVM" />
 
         <variable
-                name="context"
-                type="android.content.Context" />
+            name="context"
+            type="android.content.Context" />
 
         <variable
-                name="english"
-                type="java.lang.Boolean" />
+            name="english"
+            type="java.lang.Boolean" />
 
         <variable
-                name="hindi"
-                type="java.lang.Boolean" />
+            name="hindi"
+            type="java.lang.Boolean" />
 
         <variable
-                name="punjabi"
-                type="java.lang.Boolean" />
+            name="punjabi"
+            type="java.lang.Boolean" />
 
     </data>
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:paddingBottom="30dp"
-            android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingBottom="30dp">
 
         <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginVertical="20dp"
-                android:src="@drawable/ic_launcher" />
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginVertical="20dp"
+            android:src="@drawable/ic_launcher" />
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/choose_language"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/choose_language"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp"
+            android:textStyle="bold" />
 
         <FrameLayout
-                android:id="@+id/flEnglish"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:background="@drawable/stroke_btn_selector"
-                android:layout_marginTop="20dp">
+            android:id="@+id/flEnglish"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/stroke_btn_selector">
 
             <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:clickable="false"
-                    android:textColor="@{english ? context.getColor(R.color.colorPrimary) :  context.getColor(R.color.grey)}"
-                    android:background="@android:color/transparent"
-                    android:layout_gravity="center"
-                    android:text="@string/english" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:clickable="false"
+                android:gravity="center"
+                android:text="@string/english"
+                android:textColor="@{english ? context.getColor(R.color.colorPrimary) :  context.getColor(R.color.grey)}" />
 
             <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_tick"
-                    android:id="@+id/ivEnglishTick"
-                    android:visibility="@{english ? View.VISIBLE : View.GONE}"
-                    android:layout_gravity="right|center_vertical"
-                    android:layout_marginHorizontal="10dp" />
+                android:id="@+id/ivEnglishTick"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginHorizontal="10dp"
+                android:src="@drawable/ic_tick"
+                android:visibility="@{english ? View.VISIBLE : View.GONE}" />
 
         </FrameLayout>
 
         <FrameLayout
-                android:id="@+id/flHindi"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:background="@drawable/stroke_btn_selector"
-                android:layout_marginTop="20dp">
+            android:id="@+id/flHindi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/stroke_btn_selector">
 
             <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textColor="@{hindi ? context.getColor(R.color.colorPrimary) :  context.getColor(R.color.grey)}"
-                    android:background="@android:color/transparent"
-                    android:layout_gravity="center"
-                    android:clickable="false"
-                    android:text="@string/hindi" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:clickable="false"
+                android:gravity="center"
+                android:text="@string/hindi"
+                android:textColor="@{hindi ? context.getColor(R.color.colorPrimary) :  context.getColor(R.color.grey)}" />
 
             <ImageView
-                    android:id="@+id/ivHindiTick"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_tick"
-                    android:visibility="@{hindi ? View.VISIBLE : View.GONE}"
-                    android:layout_gravity="right|center_vertical"
-                    android:layout_marginHorizontal="10dp" />
+                android:id="@+id/ivHindiTick"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginHorizontal="10dp"
+                android:src="@drawable/ic_tick"
+                android:visibility="@{hindi ? View.VISIBLE : View.GONE}" />
 
         </FrameLayout>
 
         <FrameLayout
-                android:id="@+id/flPunjabi"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:background="@drawable/stroke_btn_selector"
-                android:layout_marginTop="20dp">
+            android:id="@+id/flPunjabi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/stroke_btn_selector">
 
             <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:clickable="false"
-                    android:textColor="@{punjabi ? context.getColor(R.color.colorPrimary) :  context.getColor(R.color.grey)}"
-                    android:background="@android:color/transparent"
-                    android:layout_gravity="center"
-                    android:text="@string/punjabi" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:clickable="false"
+                android:gravity="center"
+                android:text="@string/punjabi"
+                android:textColor="@{punjabi ? context.getColor(R.color.colorPrimary) :  context.getColor(R.color.grey)}" />
 
             <ImageView
-                    android:id="@+id/icPunjabiTick"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_tick"
-                    android:visibility="@{punjabi ? View.VISIBLE : View.GONE}"
-                    android:layout_gravity="right|center_vertical"
-                    android:layout_marginHorizontal="10dp" />
+                android:id="@+id/icPunjabiTick"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginHorizontal="10dp"
+                android:src="@drawable/ic_tick"
+                android:visibility="@{punjabi ? View.VISIBLE : View.GONE}" />
 
         </FrameLayout>
 
