--- a/app/src/main/res/layout/fragment_light_amenities.xml
+++ b/app/src/main/res/layout/fragment_light_amenities.xml
@@ -67,7 +67,7 @@
             <FrameLayout
                 android:id="@+id/frameTowerPhoto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_130sdp"
                 android:background="@color/grey_light"
                 android:visibility="@{rbTowerYes.checked ? View.VISIBLE : View.GONE}">
 
