--- a/app/src/main/res/drawable/btn_red_stroke.xml
+++ b/app/src/main/res/drawable/btn_red_stroke.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke
-            android:color="@color/grey"
-            android:width="1dp"
-            />
+    <item android:state_pressed="false">
+        <shape>
+            <stroke android:width="@dimen/_1sdp" android:color="@color/colorPrimary" />
+        </shape>
+    </item>
+    <item android:state_pressed="true">
+        <shape>
+            <stroke android:width="@dimen/_2sdp" android:color="@color/colorPrimaryDark" />
+        </shape>
+    </item>
 
-</shape>
+
+</selector>
