--- a/app/src/main/res/layout/fragment_add_dhaba_step2.xml
+++ b/app/src/main/res/layout/fragment_add_dhaba_step2.xml
@@ -344,13 +344,15 @@
                 app:layout_constraintTop_toBottomOf="@+id/uploadProofLayout" />
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/btnSaveDraft"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_15sdp"
+                android:layout_marginBottom="@dimen/_30sdp"
                 android:fontFamily="@font/opensans_bold"
                 android:text="@string/save_as_draft"
                 android:textColor="@color/colorRed"
-                android:textSize="@dimen/_16ssp"
+                android:textSize="@dimen/_14ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
