--- a/app/src/main/res/layout/fragment_add_dhaba_step2.xml
+++ b/app/src/main/res/layout/fragment_add_dhaba_step2.xml
@@ -117,6 +117,44 @@
                     android:textSize="@dimen/_14ssp" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <LinearLayout
+                android:id="@+id/fetchLocationLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/addressTil">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvCurrLocation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:background="@drawable/default_btn_selector"
+                    android:drawableLeft="@drawable/ic_location"
+                    android:drawablePadding="@dimen/_5sdp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:paddingVertical="@dimen/_5sdp"
+                    android:text="@string/fetch_location"
+                    android:textColor="@color/colorRed"
+                    android:textSize="@dimen/_14ssp" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvMapPicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:background="@drawable/default_btn_selector"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:paddingVertical="@dimen/_5sdp"
+                    android:text="@string/pick_from_map"
+                    android:textColor="@color/colorRed"
+                    android:textSize="@dimen/_14ssp" />
+            </LinearLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/panNoTil"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -126,7 +164,7 @@
                 android:hint="@string/pan_number"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addressTil">
+                app:layout_constraintTop_toBottomOf="@+id/fetchLocationLayout">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
